--- a/press.html
+++ b/press.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Template excercise</title>
+    <title>Press</title>
     <link href="styles.css" rel="stylesheet" type="text/css" />
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -19,6 +19,6 @@
   <body>
     <div id="root"></div>
     <script src="/template.js"></script>
-    <script src="/main.js"></script> 
+    <script src="/press.js"></script> 
   </body>
 </html>
